--- a/style.css
+++ b/style.css
@@ -16,7 +16,8 @@ ul{
   text-align: center;
 }
 
-li{
+li,
+a{
   color: black;
   font-family: 'Oswald', sans-serif;
   font-size: 16px;
@@ -27,4 +28,14 @@ li{
 
 li:hover{
   color: maroon;
+}
+
+.welcome{
+  background-color: #815a5a;
+  box-sizing: border-box;
+  padding: 40px;
+  text-align: center;
+  width: 100%;
+  position: relative;
+  top: 50px;
 }
